# norse

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  claude.md  cog.toml  release-please-config.json
.github/workflows/: build-release.yml  ci.yml  commitlint.yml  release-please.yml  release-pr.yml  release.yml
docs/: features.md  keybindings.md
src/: app.rs  cache.rs  config.rs  github.rs  llm.rs  main.rs  search.rs  ui.rs
tests/: conftest.py  pytest.ini  requirements.txt  test_approval.py  test_diff_view.py  test_pr_browser.py  test_startup.py
tests/fixtures/: commit_diff.txt  commits.json  languages.json  pr_diff.txt  prs_org.json  prs_reviews.json  repos_search.json  watched_repos.json
